Remove legacy support for registering ScriptEngine as Nashorn.