@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -41,18 +41,12 @@
 package com.oracle.truffle.js.scriptengine;
 
 import java.lang.ref.WeakReference;
-import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 import javax.script.ScriptEngine;
 import javax.script.ScriptEngineFactory;
-import javax.script.ScriptEngineManager;
 
-import org.graalvm.nativeimage.ImageInfo;
 import org.graalvm.polyglot.Engine;
 
 public final class GraalJSEngineFactory implements ScriptEngineFactory {
@@ -62,49 +56,10 @@ public final class GraalJSEngineFactory implements ScriptEngineFactory {
     private static final String LANGUAGE = "ECMAScript";
     private static final String LANGUAGE_VERSION = "ECMAScript 262 Edition 11";
 
-    private static final String[] NAMES = {"js", "JS", "JavaScript", "javascript", "ECMAScript", "ecmascript",
-                    "Graal.js", "graal.js", "Graal-js", "graal-js", "Graal.JS", "Graal-JS", "GraalJS", "GraalJSPolyglot"};
-    private static final String[] MIME_TYPES = {"application/javascript", "application/ecmascript", "text/javascript", "text/ecmascript"};
-    private static final String[] EXTENSIONS = {"js", "mjs"};
-
-    private static final String NASHORN_ENGINE_NAME = "Oracle Nashorn";
-    private static final List<String> names;
-    private static final List<String> mimeTypes;
-    private static final List<String> extensions;
-
-    public static final boolean RegisterAsNashornScriptEngineFactory = Boolean.getBoolean("graaljs.RegisterGraalJSAsNashorn");
-
-    static {
-        List<String> nameList = Arrays.asList(NAMES);
-        List<String> mimeTypeList = Arrays.asList(MIME_TYPES);
-        List<String> extensionList = Arrays.asList(EXTENSIONS);
-
-        // Needed on Java 8 only: ensure Graal.js is consistently picked as the js engine.
-        // Skipped if the class is initialized at run time in a native image since likely,
-        // the image was not built with a reflection config that would allow patching.
-        boolean java8 = System.getProperty("java.specification.version").compareTo("1.9") < 0;
-        if (java8 && !ImageInfo.inImageRuntimeCode()) {
-            ScriptEngineFactory nashornFactory = getNashornEngineFactory();
-            if (nashornFactory != null) {
-                if (RegisterAsNashornScriptEngineFactory) {
-                    nameList = new ArrayList<>(nameList);
-                    nameList.removeAll(nashornFactory.getNames());
-                    nameList.addAll(nashornFactory.getNames());
-                    mimeTypeList = new ArrayList<>(mimeTypeList);
-                    mimeTypeList.removeAll(nashornFactory.getMimeTypes());
-                    mimeTypeList.addAll(nashornFactory.getMimeTypes());
-                    extensionList = new ArrayList<>(extensionList);
-                    extensionList.removeAll(nashornFactory.getExtensions());
-                    extensionList.addAll(nashornFactory.getExtensions());
-                }
-                clearEngineFactory(nashornFactory);
-            }
-        }
-
-        names = Collections.unmodifiableList(nameList);
-        mimeTypes = Collections.unmodifiableList(mimeTypeList);
-        extensions = Collections.unmodifiableList(extensionList);
-    }
+    private static final List<String> NAMES = List.of("js", "JS", "JavaScript", "javascript", "ECMAScript", "ecmascript",
+                    "Graal.js", "graal.js", "Graal-js", "graal-js", "Graal.JS", "Graal-JS", "GraalJS", "GraalJSPolyglot");
+    private static final List<String> MIME_TYPES = List.of("application/javascript", "application/ecmascript", "text/javascript", "text/ecmascript");
+    private static final List<String> EXTENSIONS = List.of("js", "mjs");
 
     private WeakReference<Engine> defaultEngine;
     private final Engine userDefinedEngine;
@@ -150,17 +105,17 @@ public final class GraalJSEngineFactory implements ScriptEngineFactory {
 
     @Override
     public List<String> getExtensions() {
-        return extensions;
+        return EXTENSIONS;
     }
 
     @Override
     public List<String> getMimeTypes() {
-        return mimeTypes;
+        return MIME_TYPES;
     }
 
     @Override
     public List<String> getNames() {
-        return names;
+        return NAMES;
     }
 
     @Override
@@ -231,50 +186,5 @@ public final class GraalJSEngineFactory implements ScriptEngineFactory {
         }
 
         return sb.toString();
-    }
-
-    private static ScriptEngineFactory getNashornEngineFactory() {
-        for (ScriptEngineFactory factory : new ScriptEngineManager().getEngineFactories()) {
-            if (NASHORN_ENGINE_NAME.equals(factory.getEngineName())) {
-                return factory;
-            }
-        }
-        return null;
-    }
-
-    private static void clearEngineFactory(ScriptEngineFactory factory) {
-        assert factory != null;
-
-        try {
-            Class<?> clazz = factory.getClass();
-            for (String immutableListFieldName : new String[]{"names", "mimeTypes", "extensions"}) {
-                Field immutableListField = clazz.getDeclaredField(immutableListFieldName);
-                immutableListField.setAccessible(true);
-                Object immutableList = immutableListField.get(null);
-
-                Class<?> unmodifiableListClazz = Class.forName("java.util.Collections$UnmodifiableList");
-                Field unmodifiableListField = unmodifiableListClazz.getDeclaredField("list");
-                unmodifiableListField.setAccessible(true);
-
-                Class<?> unmodifiableCollectionClazz = Class.forName("java.util.Collections$UnmodifiableCollection");
-                Field unmodifiableCField = unmodifiableCollectionClazz.getDeclaredField("c");
-                unmodifiableCField.setAccessible(true);
-
-                List<?> list = (List<?>) unmodifiableListField.get(immutableList);
-                List<Object> filteredList = new ArrayList<>();
-
-                for (Object item : list) {
-                    if (!RegisterAsNashornScriptEngineFactory && item.toString().toLowerCase().equals("nashorn")) {
-                        filteredList.add(item);
-                    }
-                }
-
-                unmodifiableListField.set(immutableList, filteredList);
-                unmodifiableCField.set(immutableList, filteredList);
-            }
-        } catch (NullPointerException | ClassNotFoundException | IllegalAccessException | IllegalArgumentException | NoSuchFieldException | SecurityException e) {
-            System.err.println("Failed to clear engine names [" + factory.getEngineName() + "]");
-            e.printStackTrace();
-        }
     }
 }
